--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@cartridge/controller": "^0.3.46",
     "next": "14.2.6",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "starknet": "^6.11.0",
+    "tokenbound-connectkit-test": "^1.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
