--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@cartridge/controller": "^0.3.46",
     "next": "14.2.6",
     "react": "^18",
     "react-dom": "^18",
@@ -17,6 +16,7 @@
     "tokenbound-connectkit-test": "^1.0.1"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.13",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
